# sdk-python

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  buf.gen.yaml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/workflows/: python-package.yml
example/: app.py
proto/stanza/hub/v1/: auth_pb2.py  config_pb2_grpc.py
samples/fastapi/: pyproject.toml
samples/fastapi/src/: main.py
samples/sqs/: pyproject.toml
samples/sqs/src/: main.py
