[tool.poetry]
name = "fastapi-example"
version = "0.0.1"
description = "Example of adding Stanza SDK to a FastAPI service."
authors = ["Matthew Girard <msg@sre.is>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
requests = "^2.31.0"
uvicorn = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
